# python-project-template

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
.github/workflows/: CI-test.yaml  create-release-tag.yaml  pre-commit.yaml  prepare-release.yaml  release.yaml
csrc/: main.cpp
examples/: test.py
include/: project.hpp
my_project/: __init__.py  version.py
my_project/lib/: my_project_core.pyi
python/: bindings.cpp
scripts/: personalize.py  release.sh  release_notes.py
tests/: test_calculator.py
